--- a/gmail-clone/src/components/Sidebar.css
+++ b/gmail-clone/src/components/Sidebar.css
@@ -1,3 +1,9 @@
+.sidebar {
+    flex: 0.3;
+    max-width: 300px;
+    padding-right: 20px;
+}
+
 .sidebar > button {
     color: black;
 }
@@ -11,4 +17,9 @@
     padding: 15px !important;
     border-radius: 30px !important;
     box-shadow: 0px 2px 5px -2px black;
+}
+
+.sidebar-footer {
+    display: flex;
+    justify-content: center;
 }
